# fern

./: .coveragerc  .cursorrules  .editorconfig  .gitignore  AUDIT_VOICE_CLIENTS.md  CRITICAL_GAPS_ANALYSIS.md  CRITICAL_GAPS_SUMMARY.md  DEPLOY.md  GEMINI_SETUP.md  IMPROVEMENTS_2025.md  LICENSE  Makefile  NATIVE_OPTIMIZATIONS.md  PERFORMANCE_AUDIT.md  README.md  README_2025_QUICK_START.md  REALTIME_AGENT_AUDIT.md  REALTIME_AGENT_GUIDE.md  RESEARCH_2025.md  RTX_5090_SETUP.md  RUNPOD_QUICKSTART.md  SPEECHMATICS_ANALYSIS.md  TROUBLESHOOTING.md  VOICE_CLIENTS.md  benchmark_rvq.py  client_voice.py  pyproject.toml  pytest.ini  quickstart.py  realtime_agent.py  realtime_agent_2025.py  realtime_agent_advanced.py  requirements.txt  runpod_setup.sh  setup.py  start_voice_client.sh  start_web_client.sh  test_2025_features.py  test_gemini.py
.github/workflows/: ci.yml
examples/: __init__.py  basic_conversation.py  benchmark.py  gemini_assistant.py  streaming_assistant.py  streaming_demo.py
fern/: __init__.py  cli.py  config.py
fern/asr/: __init__.py  convfill_turn.py  vad.py  vad_detector.py  whisper_asr.py
fern/config/: __init__.py  native_optimizations.py
fern/llm/: __init__.py  dialogue_manager.py  gemini_manager.py  local_llm.py
fern/metrics/: __init__.py  performance.py
fern/native/: CMakeLists.txt  README.md
fern/native/cuda/: rvq_cuda.cu  rvq_cuda.h
fern/native/python/: __init__.py  bindings.cpp
fern/pipeline/: __init__.py  streaming.py  voice_pipeline.py
fern/training/: __init__.py  bucketed_sampler.py  config.py  dataset.py  evaluation.py  trainer.py
fern/tts/: __init__.py  csm_config.py  csm_forward.py  csm_real.py  csm_streaming.py  csm_tts.py  rvq_optimizer.py  true_streaming.py  voxtream_streaming.py
fern/tts/csm/: generator.py  load_real.py  load_stub.py
fern/tts/csm/moshi/: __init__.py
fern/tts/csm/moshi/models/: __init__.py  loaders.py
fern/utils/: __init__.py  device.py  logging.py
fern/vad/: semantic_turn_detector.py
models/: model_config.json
models/csm-1b/: README.md
models/mimi/: README.md  config.json
scripts/: apply_native_optimizations.py  apply_optimizations.py  download_models.py  fix_audio_deps.sh  integrate_real_models.py  package_for_runpod.sh  prepare_dataset.py  pretokenize.py  pretokenize_csm.py  quick_optimizations.py  runpod_setup.sh  test_real_models.py  train_lora.py
tests/: __init__.py  test_bucketed_sampler.py  test_config.py  test_config_fixes.py  test_csm_forward.py  test_integration.py  test_metrics.py  test_refactoring.py  test_rvq_optimizer.py  test_semantic_turn_detector.py  test_streaming.py  test_vad_detector.py  test_voice_client.py  test_web_api.py
tools/profiling/: analyze_results.py  profile_tts.py
web_client/: __init__.py  app.py  index.html  realtime.html
